--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "prettier": {}
+  "prettier": {},
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
