--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.mjs",
+    "dev": "node --watch index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": {},
