--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "prettier": {},
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.2"
   }
 }
