--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "prettier": {},
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
