--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
